deploy-web-app-to-aws/4_waf-alb-lambda/template.yml
AWSTemplateFormatVersion: '2010-09-09'
Transform: AWS::Serverless-2016-10-31

Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
    - Label:
        default: Configuration
      Parameters:
      - ApplicationName
      - Enviroment
      - AllowSourceIp
      - VpcCIDR
      - PublicSubnet1CIDR
      - PublicSubnet2CIDR

Parameters:
  ApplicationName:
    Description: Please specify the application name of the resource
    Type: String
    Default: web-app-on-waf-alb-lambda

  Enviroment:
    Description: Please specify the environment of the resource
    Type: String
    Default: dev

  AllowSourceIp:
    Description: Required. Please specify the Ip to allow access to the ai text search service.
    Type: String

  VpcCIDR:
    Description: Please specify the application name of the resource
    Type: String
    Default: 192.168.0.0/24

  PublicSubnet1CIDR:
    Description: Please enter the IP range (CIDR notation) for the public subnet in the first Availability Zone
    Type: String
    Default: 192.168.0.0/27

  PublicSubnet2CIDR:
    Description: Please enter the IP range (CIDR notation) for the public subnet in the second Availability Zone
    Type: String
    Default: 192.168.0.32/27

Resources:

  ###################################################
  ## VPC
  ###################################################

  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCIDR
      Tags:
      - Key: Name
        Value: !Sub ${ApplicationName}-${Enviroment}-vpc

  ###################################################
  ## PublicSubnet
  ###################################################

  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Sub ${AWS::Region}a
      CidrBlock: !Ref PublicSubnet1CIDR
      Tags:
      - Key: Name
        Value: !Sub ${ApplicationName}-${Enviroment}-public-subnet-1a

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Sub ${AWS::Region}c
      CidrBlock: !Ref PublicSubnet2CIDR
      Tags:
      - Key: Name
        Value: !Sub ${ApplicationName}-${Enviroment}-public-subnet-1c

  ###################################################
  ## IGW
  ###################################################

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
      - Key: Name
        Value: !Sub ${ApplicationName}-${Enviroment}-igw

  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC

  ###################################################
  ## RouteTable for PublicSubnet
  ###################################################

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: !Sub rtb-${ApplicationName}-${Enviroment}-public-subnet

  DefaultPublicRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: '0.0.0.0/0'
      GatewayId: !Ref InternetGateway

  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet1

  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet2

  ###################################################
  ## WAF
  ###################################################
  WebACL:
    Type: AWS::WAFv2::WebACL
    Properties:
      Name: !Sub ${ApplicationName}-${Enviroment}-web-acl
      DefaultAction:
        Allow: {}
      Scope: REGIONAL
      VisibilityConfig:
        SampledRequestsEnabled: true
        CloudWatchMetricsEnabled: true
        MetricName: !Sub ${ApplicationName}-${Enviroment}-web-acl
      Rules:
        -
          Name: AWS-AWSManagedRulesCommonRuleSet
          Priority: 1
          Statement:
            ManagedRuleGroupStatement:
              VendorName: AWS
              Name: AWSManagedRulesCommonRuleSet
          OverrideAction:
            None: {}
          VisibilityConfig:
            CloudWatchMetricsEnabled: true
            SampledRequestsEnabled: true
            MetricName:  AWS-AWSManagedRulesCommonRuleSet

  ###################################################
  ## Web ACL Association for WAF
  ###################################################
  WebACLAssociation:
    Type: AWS::WAFv2::WebACLAssociation
    Properties:
      ResourceArn: !Ref  ApplicationLoadBalancer
      WebACLArn: !GetAtt WebACL.Arn

  ###################################################
  ## Security Group for ALB
  ###################################################

  ALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub ${ApplicationName}-${Enviroment}-alb-sg
      GroupDescription: Security group for alb
      VpcId: !Ref VPC
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: '80'
        ToPort: '80'
        CidrIp: !Ref AllowSourceIp
        Description: Allow HTTP traffic from the alb
      SecurityGroupEgress:
      - IpProtocol: -1
        CidrIp: '0.0.0.0/0'
        Description: Allow all outbound traffic

  ###################################################
  ## ALB
  ###################################################

  ApplicationLoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: !Sub ${ApplicationName}-${Enviroment}-alb
      Scheme: internet-facing
      SecurityGroups:
      - !Ref ALBSecurityGroup
      Subnets:
      - !Ref PublicSubnet1
      - !Ref PublicSubnet2
      Type: application

  TargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Name: !Sub ${ApplicationName}-${Enviroment}-tg
      TargetType: lambda
      Targets:
      - Id: !GetAtt Lambda.Arn

  LoadBalancerListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !Ref ApplicationLoadBalancer
      Port: 80
      Protocol: HTTP
      DefaultActions:
        - TargetGroupArn: !Ref 'TargetGroup'
          Order: 1
          Type: "forward"

  ###################################################
  ## Lambda
  ###################################################

  LambdaLayer:
    Type: AWS::Serverless::LayerVersion
    DeletionPolicy: Delete
    UpdateReplacePolicy: Delete
    Properties:
      LayerName: !Sub ${ApplicationName}-${Enviroment}-lambda-layer
      Description: Layer description
      ContentUri: layers
      CompatibleRuntimes:
        - python3.11
    Metadata:
      BuildMethod: python3.11

  Lambda:
    Type: AWS::Serverless::Function
    Properties:
      Runtime: python3.11
      Architectures:
      - x86_64
      CodeUri: app
      FunctionName: !Sub ${ApplicationName}-${Enviroment}-lambda
      Timeout: 180
      MemorySize: 4096
      Handler: run.sh
      Environment:
        Variables:
          AWS_LAMBDA_EXEC_WRAPPER: /opt/bootstrap
          TODO_TABLE: !Ref TodoTable
      Policies:
        - DynamoDBCrudPolicy:
            TableName: !Ref TodoTable
      Layers:
      - !Ref LambdaLayer
      - !Sub arn:aws:lambda:${AWS::Region}:753240598075:layer:LambdaAdapterLayerX86:23

  LambdaInvokePermission:
    Type: AWS::Lambda::Permission
    Properties:
      FunctionName: !GetAtt Lambda.Arn
      Action: lambda:InvokeFunction
      Principal: elasticloadbalancing.amazonaws.com

  ###################################################
  ## DynamoDB
  ###################################################

  TodoTable:
    Type: AWS::DynamoDB::Table
    DeletionPolicy: Delete
    UpdateReplacePolicy: Delete
    Properties:
      TableName: !Sub "${ApplicationName}-${Enviroment}-todo-table"
      AttributeDefinitions:
        - AttributeName: TodoID
          AttributeType: S
      KeySchema:
        - AttributeName: TodoID
          KeyType: HASH
      ProvisionedThroughput:
        ReadCapacityUnits: 5
        WriteCapacityUnits: 5

Outputs:
  ALBFQDN:
    Description: The FQDN of the ALB
    Value: !GetAtt ApplicationLoadBalancer.DNSName
